<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue">
    <android.support.constraint.ConstraintLayout
            android:background="@drawable/round_one_corner"
            tools:context=".MainActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:src="@drawable/tanay_pant_img_circle"
                android:id="@+id/tanayPantImg"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/speaker_name"/>
        <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/germ_flag"
                android:id="@+id/germFlagImg"
                app:layout_constraintBottom_toBottomOf="@+id/tanayPantImg"
                app:layout_constraintEnd_toEndOf="@+id/tanayPantImg"
                android:contentDescription="@string/german_flag"/>
        <TextView
                android:text="@string/speaker_name"
                android:lines="2"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tanayPantName"
                app:layout_constraintStart_toEndOf="@+id/tanayPantImg"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="8dp"/>
        <TextView
                android:textSize="20sp"
                android:text="@string/speaker_job"
                android:textColor="@color/colorPrimaryDark"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tanayPantJob"
                app:layout_constraintStart_toStartOf="@+id/tanayPantName"
                app:layout_constraintTop_toBottomOf="@+id/tanayPantName"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"/>
        <TextView
                android:text="@string/speaker_location"
                android:layout_width="wrap_content"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:id="@+id/tanayPantLocation"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@+id/tanayPantJob"
                app:layout_constraintTop_toBottomOf="@+id/tanayPantJob"
                android:layout_marginTop="8dp"/>
        <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/twitter"
                android:id="@+id/twitterIcon"
                app:layout_constraintStart_toStartOf="@+id/tanayPantImg"
                app:layout_constraintTop_toBottomOf="@+id/tanayPantImg"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/twitter_icon"/>
        <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/hyperlink"
                android:id="@+id/linkIcon"
                android:contentDescription="@string/link_icon"
                app:layout_constraintStart_toEndOf="@+id/twitterIcon"
                app:layout_constraintTop_toBottomOf="@+id/tanayPantImg"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"/>
        <TextView
                android:text="@string/speaker_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/speakerInfo"
                app:layout_constraintTop_toBottomOf="@+id/linkIcon"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginTop="8dp"/>

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:layout_constraintTop_toBottomOf="@+id/speakerInfo"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="8dp"
                android:background="@color/waveBlue"
                android:id="@+id/backgroundView">


            <TextView
                    android:text="@string/report_name"
                    android:textSize="25sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/reportName"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="16dp"/>
            <TextView
                    android:text="@string/room"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/roomName"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    app:layout_constraintTop_toBottomOf="@+id/reportName"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"/>
            <TextView
                    android:text="@string/tag_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:background="@drawable/round_corners"
                    android:textStyle="bold"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:gravity="center"
                    android:id="@+id/tagName"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/roomName"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"/>
            <TextView
                    android:text="@string/time"
                    android:layout_width="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:layout_height="wrap_content"
                    android:id="@+id/time"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/tagName"/>
            <TextView
                    android:text="@string/date"
                    android:textSize="18sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/date"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="2dp"
                    app:layout_constraintBottom_toBottomOf="@+id/time"
                    app:layout_constraintStart_toEndOf="@+id/time"/>
        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>
</ScrollView>