<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <android.support.constraint.ConstraintLayout
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            tools:context=".MainActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:src="@drawable/tanay_pant_img_circle"
                android:id="@+id/tanayPantImg"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/speaker_name"/>
        <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/germ_flag"
                android:id="@+id/germFlagImg"
                app:layout_constraintBottom_toBottomOf="@+id/tanayPantImg"
                app:layout_constraintEnd_toEndOf="@+id/tanayPantImg"
                android:contentDescription="@string/german_flag"/>
        <TextView
                android:text="@string/speaker_name"
                android:lines="2"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tanayPantName"
                app:layout_constraintStart_toEndOf="@+id/tanayPantImg"
                android:layout_marginStart="30dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"/>
        <TextView
                android:textSize="20sp"
                android:text="@string/speaker_job"
                android:textColor="@color/colorPrimaryDark"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tanayPantJob"
                app:layout_constraintStart_toStartOf="@+id/tanayPantName"
                app:layout_constraintTop_toBottomOf="@+id/tanayPantName"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"/>
        <TextView
                android:text="@string/speaker_location"
                android:layout_width="wrap_content"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:id="@+id/tanayPantLocation"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@+id/tanayPantJob"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tanayPantJob"/>
        <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/twitter"
                android:id="@+id/twitterIcon"
                app:layout_constraintStart_toStartOf="@+id/tanayPantImg"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/twitter_icon"
                app:layout_constraintTop_toBottomOf="@+id/tanayPantImg"/>
        <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/hyperlink"
                android:id="@+id/linkIcon"
                android:contentDescription="@string/link_icon"
                app:layout_constraintStart_toEndOf="@+id/twitterIcon"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tanayPantImg"/>
        <TextView
                android:text="@string/speaker_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/speakerInfo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="16dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/tanayPantLocation"/>

        <View android:layout_width="match_parent"
              android:layout_height="176dp"
              app:layout_constraintTop_toBottomOf="@+id/speakerInfo"
              android:layout_marginTop="24dp"
              android:background="@color/waveBlue"
              tools:layout_editor_absoluteX="16dp" android:layout_marginBottom="8dp"
              app:layout_constraintBottom_toBottomOf="parent"/>

    </android.support.constraint.ConstraintLayout>
</ScrollView>