<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".MainActivity">

        <TextView
                android:id="@+id/pant_report_name"
                android:text="@string/pant_report_name"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"/>

        <TextView
                android:id="@+id/frontend_tag_name"
                android:text="@string/frontend_tag_name"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:gravity="center"
                android:background="@drawable/round_corners"
                android:layout_width="100dp"
                android:layout_height="35dp"
                app:layout_constraintStart_toStartOf="@+id/pant_report_name"
                app:layout_constraintTop_toBottomOf="@+id/pant_report_name"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"/>

        <TextView
                android:id="@+id/speaker_pant_name"
                android:text="@string/speaker_pant_name"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frontend_tag_name"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"/>

        <TextView
                android:id="@+id/pant_report_desc"
                android:text="@string/pant_report_desc"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_margin="8dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/speaker_pant_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"/>

        <Button
                android:id="@+id/all_reports_button"
                android:text="@string/all_reports_name"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:backgroundTint="@color/blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@+id/pant_report_desc"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"/>

    </android.support.constraint.ConstraintLayout>

</ScrollView>